--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,7 +19,8 @@ h1,h2,h3,h4,h5,h6{
     justify-content: center;
 }
 .contenedor-50{
-    width: 50%;
+    width: 100%;
+    display: flex;
     /* background: red; */
 }
 .contenedor-100{
@@ -31,7 +32,7 @@ h1,h2,h3,h4,h5,h6{
 }
 .imagen-100{
     width: 100%;
-    min-height: 375px;
+    min-height: 150px;
     max-height: 600px;
     object-fit: cover;
     object-position: center;
@@ -74,4 +75,41 @@ h1,h2,h3,h4,h5,h6{
     color: #01401C !important;
     border-radius: 8px !important;
     text-shadow: 1px 1px 0px rgba(0,0,0,0.2);
+}
+.textleft{
+    text-align: justify;
+    width: 300px;
+    border: 1px solid silver;
+    padding: 20px 10px;
+}
+.textright{
+    text-align: justify;
+    width: 300px;
+    border: 1px solid silver;
+    padding: 20px 10px;
+}
+.dv11{
+    margin-left: 30px;
+    display: flex;
+    margin: 5px 100px;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+}
+.img{
+    display: flex;
+    margin: 5px 5px;
+    padding: 60px 0px;
+    border: 1px solid silver;
+    display:table-cell;
+    vertical-align:middle;
+    align-items: center
+    
+}
+.dv13{
+    margin-right: 30px;
+    display: flex;
+    margin: 5px 100px;
+    
+    
 }
