--- a/css/estilos.css
+++ b/css/estilos.css
@@ -158,11 +158,60 @@ h1,h2,h3,h4,h5,h6{
     margin-top: 15px;
 }
 .tablaprecios{
-    margin-top: 15px;
+    margin-top: 40px;
     text-align: center;
     border: 6px solid rgb(105, 189, 112);
     border-radius: 5px;
     width: 450px;
     align-items: center;
     margin-left: 450px;
+    margin-bottom: 40px;
+}
+/** Página Inicio**/
+
+.tituloinicio{
+    color:black;
+    width: 50%;
+    text-align: center;
+    font-size: 20px;
+    margin-left: 40px;
+    
+}
+.parrafoinicio{
+    color:rgb(9, 37, 8);
+    width: 100%;
+    text-align: justify;
+    margin-left: 50px;
+}
+.boton{
+    text-decoration: none;
+    padding: 10px;
+    font-weight: 600;
+    font-size: 20px;
+    color: #ffffff;
+    background-color: #056923;
+    border-radius: 6px;
+    border: 2px solid #0ba50b;
+    float: left;
+    margin-top: 40px;
+    margin-left: 90px;
+}
+.logoempresa{
+    width: 40%;
+    float: left;
+    margin-top: 35px;
+    margin-left: 80px;
+}
+.fondo{
+    background-size: 800px 680px;
+}
+.redes{
+    text-decoration: none;
+    padding: 10px;
+    font-weight: 600;
+    font-size: 20px;
+    border-radius: 50px;
+    float: left;
+    margin-top: 33px;
+    margin-left: 85px;
 }
