--- a/css/estilos.css
+++ b/css/estilos.css
@@ -232,3 +232,73 @@ h1,h2,h3,h4,h5,h6{
     margin-top: 33px;
     margin-left: 85px;
 }
+/**Nosotros**/
+.mision{
+    color:black;
+    width: 50%;
+    text-align: center;
+    font-size: 20px;
+    margin-left: 40px;
+    float: left;
+
+}
+.misiontxt{
+    color:rgb(9, 37, 8);
+    width: 80%;
+    text-align: justify;
+    margin-left: 50px;
+}
+.vision{
+    color:black;
+    width: 30%;
+    text-align: center;
+    font-size: 20px;
+    margin-left: 40px;
+    float: left;
+}
+.visiontxt{
+    color:rgb(9, 37, 8);
+    width: 500px;
+    text-align: justify;
+    margin-left: 15px;
+}
+.perfilesprof{
+    color:rgb(9, 37, 8);
+    width: 70%;
+    text-align: justify;
+    margin-left: 80px;
+}
+.parrafosperfiles{
+    color:black;
+    width: 33%;
+    font-size: 20px;
+    float: left;
+}
+
+.imgprofiles1{
+    width: 300px;
+    height: 300px;
+    border-radius: 150px;
+    float: left;
+    margin-left: 80px;
+    border: 10px solid #05771d;
+}
+.imgprofiles2{
+    width: 300px;
+    height: 300px;
+    border-radius: 150px;
+    float: left;
+    margin-left: 120px;
+    border: 10px solid #05771d;
+}
+.imgprofiles3{
+    width: 300px;
+    height: 300px;
+    border-radius: 150px;
+    float: left;
+    margin-left: 130px;
+    border: 10px solid #05771d;
+}
+.profiles{
+    align-items: center;
+}
